<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.ProfileActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/logoBar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:paddingVertical="5dp"
        android:src="@drawable/logo_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ImageView>

<!--     Circle Image from github: hdodenhof/CircleImageView-->


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_userImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/ic_user"
        android:backgroundTint="@color/black"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoBar">

    </de.hdodenhof.circleimageview.CircleImageView>

    <TextView
        android:id="@+id/profile_userName"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:fontFamily="sans-serif"
        android:text="@string/displayUserName"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_userImage">

    </TextView>

    <TextView
        android:id="@+id/profile_userStatus"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="100dp"
        android:text="@string/displayUserStatus"
        android:textAlignment="center"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="sans-serif"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_userImage">

    </TextView>

    <ImageButton
        android:id="@+id/editPictureButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/button"
        android:src="@drawable/ic_edit"
        android:layout_marginTop="155dp"
        app:layout_constraintBottom_toTopOf="@+id/editNameButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/profile_userImage"
        app:layout_constraintTop_toBottomOf="@id/logoBar" />

    <ImageButton
        android:id="@+id/editNameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/button"
        android:src="@drawable/ic_edit"
        android:layout_marginTop="40dp"
        app:layout_constraintBottom_toTopOf="@id/editStatusButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/profile_userName"
        app:layout_constraintTop_toBottomOf="@+id/editPictureButton">
    </ImageButton>

    <ImageButton
        android:id="@+id/editStatusButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/button"
        android:src="@drawable/ic_edit"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/editNameButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/profile_userStatus"
        tools:layout_editor_absoluteY="196dp" />

    <Button
        android:id="@+id/logOutButton"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="10dp"
        android:onClick="logOutClick"
        android:text="@string/logOut"
        app:layout_constraintBottom_toTopOf="@+id/coordinatorLayout"
        app:layout_constraintStart_toStartOf="parent">

    </Button>

    <Button
        android:id="@+id/deleteAccountButton"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/deleteAccount"
        app:layout_constraintBottom_toTopOf="@+id/coordinatorLayout"
        app:layout_constraintEnd_toEndOf="parent">

    </Button>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottomAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/white"
            android:backgroundTint="@color/white"
            app:fabAnimationMode="slide"
            app:hideOnScroll="true">

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/profile_bottomNavView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="16dp"
                android:background="@color/white"
                app:menu="@menu/bottom_app_nav">

            </com.google.android.material.bottomnavigation.BottomNavigationView>

        </com.google.android.material.bottomappbar.BottomAppBar>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/profile_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:contentDescription="@string/title_activity_dashboard"
            android:onClick="profileFabBtnClick"
            android:src="@drawable/ic_home"
            app:elevation="3dp"
            app:layout_anchor="@id/bottomAppBar"
            app:tint="@color/blue"></com.google.android.material.floatingactionbutton.FloatingActionButton>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>