<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/logInBtn"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:backgroundTint="@color/white"
        android:text="@string/logIn"
        android:onClick="loginBtnClick"
        android:gravity="center_vertical"
        android:textColor="@color/blue"
        android:clickable="true"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/appName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.09">

    </TextView>

    <TextView
        android:id="@+id/signUpBtn"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:backgroundTint="@color/white"
        android:gravity="center_vertical"
        android:text="@string/signUp"
        android:textColor="@color/dark_grey"
        android:onClick="signUpBtnClick"
        android:textSize="18sp"
        android:clickable="true"
        app:layout_constraintBottom_toTopOf="@+id/appName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.088"
        app:layout_constraintStart_toEndOf="@+id/logInBtn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.081">

    </TextView>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="100dp"
        android:layout_height="75dp"
        android:padding="0dp"
        app:layout_constraintTop_toBottomOf="@id/logInBtn"
        android:src="@raw/logo_5"
        app:layout_constraintBottom_toTopOf="@+id/appName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.912"
        app:layout_constraintStart_toEndOf="@+id/signUpBtn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04"
        >
    </androidx.appcompat.widget.AppCompatImageView>



    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/logIn"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.091"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.303">

    </TextView>

    <androidx.cardview.widget.CardView
        android:id="@+id/emailContainerl"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        app:cardCornerRadius="25dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appName">

        <EditText
            android:id="@+id/emailET"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="20dp"
            android:clickable="true"
            android:background="@color/white"
            android:textColor="@color/black"
            android:hint="@string/email">

        </EditText>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/passwordContainerl"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        app:cardCornerRadius="25dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailContainerl">

        <EditText
            android:id="@+id/passwordET"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="20dp"
            android:clickable="true"
            android:inputType="textPassword"
            android:background="@color/white"
            android:textColor="@color/black"
            android:hint="@string/password3">

        </EditText>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/forgotPasswordBtn"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:backgroundTint="@color/white"
        android:clickable="true"
        android:gravity="center_vertical"
        android:text="@string/forgotPassword"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.123"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordContainerl"
        app:layout_constraintVertical_bias="0.818">

    </TextView>

    <androidx.cardview.widget.CardView
        android:layout_width="110dp"
        android:layout_height="50dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.877"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordContainerl"
        app:layout_constraintVertical_bias="0.818"
        >

        <ImageButton
            android:id="@+id/loginAccBtn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/blue"
            android:clickable="true"
            android:src="@drawable/ic_next"
            tools:layout_editor_absoluteX="239dp"
            tools:layout_editor_absoluteY="768dp">
        </ImageButton>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>